fix/style pad latest section on mobile

--- a/public/css/mainv2.css
+++ b/public/css/mainv2.css
@@ -112,6 +112,7 @@ body, p, a {
 }
 @media only screen and (max-width: 480px) {
   .latest {
+    padding: 0 1.5rem;
   }
 
   .latest h2 {
